# pokernetwork

./: .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  HACKING  HOWTO-install-from-sources  LICENSE  Makefile.am  NEWS  NIHPHOBIA  README  README.md  bootstrap  configure.ac  default.json  firststeps.html  genindex.html  index.html  objects.inv  packets.html  poker-client-specs.odp  poker-network.pc.in  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py  upgrade
_modules/: index.html
_sources/: firststeps.txt  index.txt
_static/: default.css
conf/: badwords.txt  poker.bot.xml  poker.bot.xml.in  poker.client.xml  poker.client.xml.in  poker.server.xml  poker.server.xml.in
config/: apg.m4  ccpython.m4  python-depends.m4  python.m4  unittest.m4
database/: 1.0.11-1.0.12.sql  1.0.21-1.0.22.sql  1.0.22-1.0.23.sql  1.0.25-1.0.26.sql  1.0.30-1.0.31.sql  1.0.31-1.0.32.sql  1.0.36-1.0.37.sql  1.6.0-1.7.0.sql  1.7.4-1.7.5.sql  2.0.0-2.0.2.sql  2.0.2-2.1.0.sql  2.1.0-2.1.5.sql  2.1.5-2.2.0.sql  2.2.0-2.2.1.sql  2.2.1-3.1.0.sql  3.1.0-3.2.0.sql  3.2.0-3.2.14.sql  3.2.14-4.0.0.sql  4.0.0-4.1.2.sql  4.1.2-4.3.0.sql  4.3.0-4.3.1.sql  4.3.1-4.5.0.sql  data.tables.sql  pokerdatabase.5.in  pokerdatabaseupgrade.8.in  pokerdatabaseupgrade.in  schema.sql  schema.sql.in
debian/: .python-poker-network.init.swp  changelog  control  control.breezy  control.dapper  control.edgy  control.etch  control.feisty  control.gutsy  control.hardy  control.hoary  control.intrepid  control.jaunty  control.karmic  control.lenny  control.sarge  control.squeeze  control.ubuntu  control.unstable  copyright  poker-web.config  poker-web.dirs  poker-web.install  poker-web.links  poker-web.postinst  poker-web.postrm  poker-web.preinst  poker-web.prerm  poker-web.templates  python-poker-additions.config  python-poker-additions.install  python-poker-additions.postinst  python-poker-additions.postrm  python-poker-additions.prerm  python-poker-additions.templates  python-poker-network.config  python-poker-network.default  python-poker-network.dirs  python-poker-network.docs  python-poker-network.init  (+34 more)
docs/: Makefile
examples/: README  interface.py  interface_dummy_server.py  memcache-client  merged-translation-import.plx.in  poker.bot.xml  poker.server-cygwin.xml  poker.server-monotone.xml  poker.server.xml  pokerbot.py  run-example  run-pokerserver  test-pokerweb  xmlrpc-soap.py
po/: ChangeLog  LINGUAS  Makefile.in.in  Makevars  POTFILES.in  da.po  de.po  en_US.po  es.po  fi.po  fr.po  fr_BE.po  fr_CA.po  fr_FX.po  it.po  nb.po  nl.po  poker2d.pot  pt.po  raw.string  sv.po
pokerclient2d/: Makefile.am  Makefile.cygwin  Makefile.cygwin-sh  Makefile.mingw  blind.c  build_with_mingw.bat  buy_in.c  cashier.c  chat.c  check_warning.c  chooser.c  client.xml  credits.c  dispatcher.c  dispatcher.h  game_window.py  gamewindow.py  gladegen.py  gui.c  gui.h  hand_history.c  interface.glade  interface_io.h  khotkeys.py  khotkeys.py.in  lobby.c  login.c  main.c  menu.c  message_box.c  mingw_make_install.bat  muck.c  network.c  outfits.c  poker2D-16.xpm  poker2D.xpm  poker2d-test.xml  poker2d.6.in  poker2d.in  poker2d.khotkeys  (+17 more)
pokerclient2d/cygwin/: pokerclient2d-1.0.7-1.sh  pokerclient2d-1.0.7-2.sh  pokerclient2d-1.0.7-3.sh  setup.hint
pokerclient2d/data/: Makefile.am  pygtk.py  root2window.pl  svg2gtk.py
pokerclient2d/data/Aero/: NEWS  README  gtkrc
pokerclient2d/data/interface/: gtkrc  interface.glade
pokerclient2d/data/skin/: gtkrc
pokerclient2d/poker3d-interface/: poker3d-interface.vcproj
pokerclient2d/upgrades/: 1.0.10-1.0.11.xsl  1.0.23-1.0.24.xsl  1.0.31-1.0.32.xsl  1.0.5-1.0.6.xsl  1.0.6-1.0.7.xsl  1.0.7-1.0.8.xsl.in  str.replace.function.xsl
pokernetwork/munin/: Makefile  Makefile.am  Makefile.in  poker_hands_  poker_players_  poker_traffic_  test_poker_hands_  test_poker_players_  test_poker_traffic_  test_wget1
pokerprizes/: Makefile.am  poker.prizes.xml.in  prizes.py  run.in  schema.sql  schema.sql.in  test-prizes.py.in  tourneyselectinfo.py
pokerstats/: Makefile.am  poker.stats.xml.in  pokerstats  pokerstats.1  pokerstats.1.in  pokerstats.in  run.in  stats.py  statslogic.py  test-stats.py.in  test-stats.py.in.back
pokerweb/: Makefile.am
pokerweb/conf/: apache.conf  bank_configuration.php  constants.php.in  constants_test.php  currency_configuration.php  htaccess
pokerweb/database/: schema.sql
pokerweb/pages/: bank.php  birthday.php  cash_in.php  cash_in_one.php  cash_in_two.php  cash_out.php  cash_out_one.php  cash_out_two.php  class.poker.php  common.php  constants.php.ref.in  country.txt  create_account.php  currency.php  currency_one.php  currency_test_one.php  currency_test_two.php  currency_two.php  edit_account.php  footer_default.php  header_default.php  icurrency.php  image.php  index.php  lib_filters.php  lib_images.php  login.php  logout.php  neteller.cfg  neteller.py  nusoap.php  poker.php  tilt.html  webservice.php
pokerweb/pages/tests/: README  TestSuite.html  test-cash.html  test-create_account.html  test-currencies.html  test-edit_account.html  test-index.html  test-login.html
tests/: Makefile.am  __init__.py  config.py  coverage.py  coverage_report.in  coverage_reset.in  createdatabase  finishedfilter.py  io_mockup.c  log_history.py  mock_transport.py  monitorplugin.py  poker-interface-sid.supp  poker.server.xml  pokersql.xml  pokersqlfail.xml  pokerweb  run.in  schema.sql  setupMysqlVariables  sqlmanager.py  test-actionscript.py.in  test-attrpack.py.in  test-bug-14139.py.in  test-clientserver.py.in  test-countfilter.py.in  test-currencyclient.py.in  test-fc.py  test-gamewindow.py.in  test-gladegen.py  test-gladegen.py.in  test-javascript.py.in  test-leak-no-trial.py.in  test-leak-reference.py.in  test-leak.py.in  test-nullfilter.py.in  test-packets.py.in  test-poker-interface.py  test-poker2d.py  test-poker2d.py.in  (+114 more)
tests/conf/: client.xml  poker.bot.xml.in  poker.client.xml.in  poker.server.xml.in  poker2d.xml.in  tourney_select_info.xml
tests/test-pokerdisplay2d/: pygame.py
tests/test-pygame/: pygame.py
tests/test_pokerauth/: pokerauth.py
(+125 files in other folders)
